# saml2aws-auto

./: .drone.yml  .travis.yml  Cargo.toml  Cross.toml  LICENSE  README.md  manual_iam_test.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml  release.yml
Casks/: checkpoint.sh  saml2aws-auto.rb
Formula/: saml2aws-auto.rb
ci/: before_deploy.ps1  before_deploy.sh  script.sh
docker/: Dockerfile_x86_64-unknown-linux-gnu  Dockerfile_x86_64-unknown-linux-musl  Makefile  cmake.sh  openssl.sh  xargo.sh
docs/: saml2aws-auto.1
src/: cli.rs  cli.yml  client.rs  config.rs  groups.rs  main.rs  refresh.rs  saml2aws.rs  update.rs
src/aws/: assume_role.rs  credentials.rs  mod.rs  xml.rs
src/keycloak/: form.rs  login.rs  mfa.rs  mod.rs
src/saml/: mod.rs
