[package]
name = "saml2aws-auto"
version = "1.13.2"
description = "A simple management tool for AWS credentials when using Keycloak with SAML"
license-file = "LICENSE"
authors = ["Jan Christopehrsen <jan@ruken.pw>"]

[dependencies]
clap = { version = "4.3", features = ["derive"] }
regex = "1.3"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.9"
serde-xml-rs = "0.3"
crossterm = "0.20"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
scraper = "0.20"
cookie = "0.18"
base64 = "0.22"
rust-ini = "0.21"
dirs = "5"
openssl-probe = "0.1.2"
rpassword = "7.3"
log = "0.4"
fern = "0.6"
url = "2.1"
semver = "1.0"
tabled = { version = "0.16", features = ["ansi"] }
